[package]
name = "tumblr"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
serde_json = "1.0"
uuid = "0.8.2"
warp = "0.3.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.diesel]
features = ["chrono", "postgres", "r2d2", "uuidv07"]
version = "1.4"

[dependencies.graphql]
features = ["chrono", "uuid"]
package = "async-graphql"
version = "2.9"

[dependencies.graphql-warp]
package = "async-graphql-warp"
version = "2.9"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.9"
